--- a/penny/public/index.html
+++ b/penny/public/index.html
@@ -74,7 +74,10 @@
 
     <h2>PennyJar Smart Contract Address</h2>
 
-    <input type="text" id="address" value="0x5fbdb2315678afecb367f032d93f642f64180aa3" />
+    <!-- Ropsten deployment 10/4/2021 -->
+    <input type="text" id="address" value="0x8899Bb8d782743f995eFD48522Ce16d78931AE13" />
+
+    <!-- local dev only <input type="text" id="address" value="0x5fbdb2315678afecb367f032d93f642f64180aa3" /> -->
 
     <p>(This works on the Ropsten network; update this before connecting if you're running on some other blockchain.)</p>
 
