Emit and test events from contract

--- a/penny/public/index.html
+++ b/penny/public/index.html
@@ -96,6 +96,13 @@
       <button id="take">Take from the jar</button>
     </div>
 
+    <h2>Transaction History!</h2>
+
+    <div id="history">
+    </div>
+
+
     <script src="./js/penny.js"></script>
   </body>
+
 </html>
